<resources>
    <string name="app_name">智能课堂</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email (optional)</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_account">Account</string>
    <string name="prompt_phone">Student id or Teacher id</string>
    <string name="prompt_description">Description (optional)</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_phone">This number is invalid</string>
    <string name="error_invalid_username">This account is invalid</string>
    <string name="prompt_password_repeat">repeat your password</string>
    <string name="error_invalid_password_repeat">Two passwords do not match</string>
    <string name="title_activity_register">register</string>
    <string name="title_activity_class_manager">班级管理</string>
    <string name="prompt_class_name">name</string>
    <string name="limit_num">limit_num</string>
    <string name="action_create">create</string>
    <string name="name">Name</string>
    <string name="title_activity_my_class">我的班级</string>
    <string name="title_upload_doc">上传教案</string>
    <string name="title_doc_manager">教案管理</string>
    <string name="title_student_operation">学生操作</string>
    <string name="title_my_check_in">我的签到</string>
    <string name="title_download_doc">下载教案</string>
    <string name="name_or_account">请输入班级名或者教师用户名</string>
    <string name="cczu">常州大学</string>
    <string name="mobile_lib">移动图书馆</string>
    <string name="info">信息与数理学院</string>
    <string name="search_class">查找班级</string>
    <string name="answer_question">回答问题</string>
    <string name="question_list">问题列表</string>
    <string name="student_answer">学生回答列表</string>
    <string name="action_about">about</string>
</resources>
